--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -98,6 +98,7 @@ spec:
                       operator: In
                       values:
                         - jellyfin
+                topologyKey: "kubernetes.io/hostname"
     service:
       main:
         controller: main
