--- a/kubernetes/apps/home/frigate/app/helmrelease.yaml
+++ b/kubernetes/apps/home/frigate/app/helmrelease.yaml
@@ -45,7 +45,7 @@ spec:
               tag: stable-tensorrt@sha256:2068baac8d8b9a29a97483d0ab603b024fe606ec7d555b70da5a024fbeab12e3
               # tag: stable
             env:
-              TZ: Europe/Simferopol
+              TZ: ${TIMEZONE}
               YOLO_MODELS: yolov7x-640
               # LIBVA_DRIVER_NAME: radeonsi
             envFrom:
