--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               repository: ghcr.io/onedr0p/home-assistant
               tag: 2024.7.1@sha256:decd47698a3ccff35540c1e6e887c0bc319c6c483635b0ff060a164f565ae701
             env:
-              TZ: Europe/Simferopol
+              TZ: ${TIMEZONE}
             probes:
               liveness:
                 enabled: false
