--- a/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
               repository: ghcr.io/coder/code-server
               tag: 4.90.3
             env:
-              TZ: Europe/Simferopol
+              TZ: ${TIMEZONE}
             args:
               - --auth
               - "none"
