--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
               SONARR__PORT: &port 8049
               SONARR__LOG_LEVEL: info
               SONARR__THEME: dark
-              TZ: Europe/Simferopol
+              TZ: ${TIMEZONE}
             envFrom: *envFrom
             probes:
               liveness: &probes
