--- a/kubernetes/apps/network/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/network/cloudflared/app/helmrelease.yaml
@@ -33,6 +33,7 @@ spec:
               repository: docker.io/cloudflare/cloudflared
               tag: 2024.6.1
             env:
+              TZ: ${TIMEZONE}
               NO_AUTOUPDATE: true
               TUNNEL_CRED_FILE: /etc/cloudflared/creds/credentials.json
               TUNNEL_METRICS: 0.0.0.0:8080
