--- a/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/alertmanagerconfig.yaml
@@ -7,6 +7,8 @@ metadata:
 type: Opaque
 stringData:
   alertmanager.yaml: |
+    global:
+          resolve_timeout: 5m
     receivers:
       - name: "null"
       - name: "pushover"
