--- a/kubernetes/apps/observability/gatus/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/gatus/app/helmrelease.yaml
@@ -27,30 +27,19 @@ spec:
       gatus:
         annotations:
           reloader.stakater.com/auto: "true"
-        pod:
-          dnsConfig:
-            options:
-              - { name: ndots, value: "1" }
-          securityContext:
-            runAsNonRoot: true
-            runAsUser: 65534
-            runAsGroup: 65534
-            fsGroup: 65534
-            fsGroupChangePolicy: OnRootMismatch
-            seccompProfile: { type: RuntimeDefault }
         initContainers:
           init-db:
             image:
               repository: ghcr.io/onedr0p/postgres-init
               tag: 16
-            envFrom:
+            envFrom: &envFrom
               - secretRef:
-                  name: gatus
+                  name: gatus-secret
           init-config:
             dependsOn: init-db
             image:
               repository: ghcr.io/kiwigrid/k8s-sidecar
-              tag: 1.27.5@sha256:1fc88232e223a6977c626510372a74ca1f73af073e3c361719ccf02f223c8a12
+              tag: 1.27.4@sha256:f6ed71d0f9f1175df8c4b8c674b339a74785384d25fdad21b3c3dc0554109286
             env:
               FOLDER: /config
               LABEL: gatus.io/enabled
@@ -59,7 +48,7 @@ spec:
               UNIQUE_FILENAMES: true
               METHOD: WATCH
             restartPolicy: Always
-            resources:
+            resources: &resources
               requests:
                 cpu: 10m
               limits:
@@ -70,11 +59,11 @@ spec:
               repository: ghcr.io/twin/gatus
               tag: v5.11.0@sha256:eb0374eb55e3ff84ec8f9ea10342ddb623cfba23e5836138896cde01f11cf23d
             env:
+              TZ: America/Los_Angeles
               GATUS_CONFIG_PATH: /config
               GATUS_DELAY_START_SECONDS: 5
-            envFrom:
-              - secretRef:
-                  name: gatus
+              CUSTOM_WEB_PORT: &port 80
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
@@ -82,7 +71,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: &port 8080
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -92,11 +81,17 @@ spec:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: { drop: ["ALL"] }
-            resources:
-              requests:
-                cpu: 10m
-              limits:
-                memory: 256Mi
+            resources: *resources
+        pod:
+          dnsConfig:
+            options:
+              - { name: ndots, value: "1" }
+          securityContext:
+            runAsUser: 568
+            runAsGroup: 568
+            runAsNonRoot: true
+            fsGroup: 568
+            fsGroupChangePolicy: OnRootMismatch
     service:
       app:
         controller: gatus
@@ -114,16 +109,18 @@ spec:
             scrapeTimeout: 10s
     ingress:
       app:
+        className: external
         annotations:
           external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
-        className: external
         hosts:
-          - host: status.${SECRET_DOMAIN}
+          - host: &host status.${SECRET_DOMAIN}
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
+        tls:
+          - hosts: [*host]
     serviceAccount:
       create: true
       name: gatus
@@ -132,7 +129,7 @@ spec:
         type: emptyDir
       config-file:
         type: configMap
-        name: gatus
+        name: gatus-configmap
         globalMounts:
           - path: /config/config.yaml
             subPath: config.yaml
