--- a/kubernetes/templates/gatus/guarded/configmap.yaml
+++ b/kubernetes/templates/gatus/guarded/configmap.yaml
@@ -33,7 +33,7 @@ data:
   config.yaml: |
     endpoints:
       - name: "${APP}"
-        group: external
+        group: guarded
         url: "https://${GATUS_SUBDOMAIN:-${APP}}.${SECRET_DOMAIN}${GATUS_PATH:-/}"
         interval: 1m
         ui:
