--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -10,5 +10,6 @@ resources:
   - ./smartctl-exporter/ks.yaml
   # - ./unpoller/ks.yaml
   - ./victoria-metrics/ks.yaml
+  - ./victoria-logs/ks.yaml
   - ./grafana/ks.yaml
   # - ./ntfy/ks.yaml
