--- a/kubernetes/apps/observability/victoria-logs/ks.yaml
+++ b/kubernetes/apps/observability/victoria-logs/ks.yaml
@@ -1,24 +1,23 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app victorialogs
+  name: &app victoria-logs
   namespace: flux-system
-  labels:
-    substitution.flux.home.arpa/enabled: "true"
 spec:
   targetNamespace: observability
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
   dependsOn:
     - name: longhorn
-  path: "./kubernetes/apps/observability/victoria-logs/app/"
+  path: ./kubernetes/apps/observability/victoria-logs/app
   prune: true
-  wait: false
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   interval: 30m
   retryInterval: 1m
-  timeout: 3m
+  timeout: 5m
   postBuild:
     substitute:
       APP: *app
