--- a/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
@@ -18,7 +18,7 @@ spec:
     printNotes: true
     server:
       enabled: true
-      name: victorialogs-server
+      name: server
       extraArgs:
         envflag.enable: "true"
         envflag.prefix: VM_
