--- a/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-logs/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
 
       ingress:
         enabled: true
-        ingressClassName: "nginx-internal"
+        ingressClassName: "internal"
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-prod
         hosts:
