--- a/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/victoria-metrics/app/helmrelease.yaml
@@ -206,14 +206,14 @@ spec:
             memory: 256Mi
           limits:
             cpu: 550m
-            memory: 6Gi
-        # topologySpreadConstraints:
-        #   - maxSkew: 1
-        #     topologyKey: kubernetes.io/hostname
-        #     whenUnsatisfiable: DoNotSchedule
-        #     labelSelector:
-        #       matchLabels:
-        #         app.kubernetes.io/name: vmagent
+            memory: 3Gi
+        topologySpreadConstraints:
+          - maxSkew: 1
+            topologyKey: kubernetes.io/hostname
+            whenUnsatisfiable: DoNotSchedule
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/name: vmagent
       ingress:
         enabled: true
         ingressClassName: internal
