--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -71,6 +71,7 @@ spec:
         limits:
           cpu: 4000m
           memory: 16Gi
+          nvidia.com/gpu: 1
         requests:
           cpu: 10m
           memory: 512Mi
