--- a/kubernetes/apps/media/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/app/helmrelease.yaml
@@ -97,7 +97,7 @@ spec:
                     - key: "app.kubernetes.io/name"
                       operator: In
                       values:
-                        - jellyfin
+                        - plex-media-server
                 topologyKey: "kubernetes.io/hostname"
     service:
       main:
