--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
   # - ./jellyfin/ks.yaml
   - ./recyclarr/ks.yaml
   # - ./jellyseerr/ks.yaml
-  - ./plex/ks.yaml
+  # - ./plex/ks.yaml
