--- a/kubernetes/apps/media/clusterplex/ks.yaml
+++ b/kubernetes/apps/media/clusterplex/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app plex
+  name: &app clusterplex
   namespace: flux-system
 spec:
   targetNamespace: media
@@ -13,7 +13,7 @@ spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./kubernetes/apps/media/plex/app
+  path: ./kubernetes/apps/media/clusterplex/app
   prune: true
   sourceRef:
     kind: GitRepository
