--- a/kubernetes/apps/media/clusterplex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/clusterplex/app/helmrelease.yaml
@@ -1,6 +1,6 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2beta2.json
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: plex
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: clusterplex
-      version: 1.5.1
+      version: 1.1.7
       sourceRef:
         kind: HelmRepository
         name: clusterplex
